corrected extra margin-padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,17 @@ button {
 
 .footer-logo {
     margin-bottom: 16px;
-    display: inline-block;
+    /* display: inline-block; */
+    color: var(--iris);
+    font-weight: 800;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    display: flex;
+    margin-right: 76px;
+    align-items: center;
 }
 
 /* contacts */
@@ -343,7 +353,7 @@ button {
     line-height: 1.2;
     letter-spacing: 0.02em;
     font-size: 20px;
-    padding-top: 32px;
+    /* padding-top: 32px; */
     margin-bottom: 8px;
 }
 
@@ -353,7 +363,7 @@ button {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-bottom: 32px;
+    /* padding-bottom: 32px; */
 }
 
 .team-details {
@@ -365,9 +375,14 @@ button {
 
 .footer-section {
     background-color: var(--navyblue);
-    flex-shrink: 0;
+    /* flex-shrink: 0; */
     padding: 100px 0;
 
+}
+
+.footer-section .link {
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer-text {
@@ -378,6 +393,8 @@ button {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    width: 264px;
+
 
 }
 
@@ -418,7 +435,7 @@ button {
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
-    margin-top: 96px;
+
 }
 
 .hero-portf-item {}
@@ -456,13 +473,13 @@ button {
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-    padding-bottom: 120px;
+
 
 }
 
 .projects-list-item {
     width: calc((100% - 48px) / 3);
-    border: 1px solid var(--cornflower, #E7E9FC);
+
 
 }
 
